# muhasebe

./: .gitignore  KURULUM.md  LICENSE  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: index.css
src/components/: ErrorBoundary.jsx  UpdateChecker.jsx
src/components/layout/: AppLayout.jsx  Sidebar.jsx  Titlebar.jsx
src/components/ui/: badge.jsx  button.jsx  dialog.jsx  input.jsx  label.jsx  select.jsx  toast.jsx  toaster.jsx
src/lib/: db.js  theme.jsx  use-toast.js  utils.js
src/pages/: Auth.jsx  Ayarlar.jsx  CariListe.jsx  Ekstre.jsx  FaturaKes.jsx  Islemler.jsx
